# nokia_test_task

./: CMakeLists.txt  bit_operations.cpp  bit_operations.h  list_fifth.cpp  list_fifth.h  main.cpp  prime_numbers.cpp  prime_numbers.h  prime_numbers_1000.h  tree_longest_paths.cpp  tree_longest_paths.h  words_in_text.cpp  words_in_text.h  words_in_text_ref.h
